After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 581385 - Return false when gjs_g_arg_release_internal fails
Return false when gjs_g_arg_release_internal fails
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2009-05-04 23:25 UTC by Owen Taylor
Modified: 2009-05-05 17:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Return false when gjs_g_arg_release_internal fails (824 bytes, patch)
2009-05-04 23:25 UTC, Owen Taylor
accepted-commit_now Details | Review
Improve error handling in arg.c (4.34 KB, patch)
2009-05-05 00:09 UTC, Owen Taylor
accepted-commit_now Details | Review

Description Owen Taylor 2009-05-04 23:25:27 UTC
When we don't know how to release an argument, return false
after calling gjs_throw().
Comment 1 Owen Taylor 2009-05-04 23:25:30 UTC
Created attachment 133977 [details] [review]
Return false when gjs_g_arg_release_internal fails
Comment 2 Havoc Pennington 2009-05-04 23:39:43 UTC
yep
Comment 3 Owen Taylor 2009-05-04 23:52:15 UTC
It actually skips a free; I'll squash this into a bigger patch that does a bunch of fixes on the failure paths in arg.c.
Comment 4 Owen Taylor 2009-05-05 00:09:39 UTC
Created attachment 133981 [details] [review]
Improve error handling in arg.c

values, and also improves the error messages in the calls to
gjs_throw().
Comment 5 Owen Taylor 2009-05-05 17:54:22 UTC
Pushed