Improve error handling in arg.c

- Fix return values from functions in error cases
- Don't use g_type_name(G_TYPE_NONE) in error messages; special
  case G_TYPE_NONE.
- Don't talk about "SYMBOL GArgument", just say "GArgument"

http://bugzilla.gnome.org/show_bug.cgi?id=581385